<resources>
    <string name="app_name">Analizarapp</string>
    <string name="miCuenta">MI CUENTA</string>

    <!-- Strings Alarmas Configuracion-->
    <string name="alarmas_titulo">Mis alarmas</string>
    <string name="alarmas_nombre">Nombre de la alarma</string>
    <string name="alarmas_nombre_placeholder">Nueva Alarma</string>
    <string name="alarmas_frecuencia">Frecuencia</string>
    <string name="alarmas_diaria">Diaria</string>
    <string name="alarmas_semanal">Semanal</string>
    <string name="alarmas_mensual">Mensual</string>
    <string name="alarmas_limite">Limite</string>
    <string name="alarmas_placeholder">Ingrese limite de consumo</string>
    <string name="alarmas_unidad">Kw</string>
    <string name="alarmas_inicio">Inicio</string>
    <string name="alarmas_ph_fecha">DD MM AA</string>
    <string name="alarmas_ph_hora">HH MM</string>
    <string name="alarmas_btn_salir">SALIR</string>
    <string name="alarmas_btn_guardar">GUARDAR</string>
    <string name="alarmas_btn_eliminar">Eliminar</string>

    <!-- Strings Iluminacion Configuracion-->
    <string name="iluminacion_titulo">Iluminación</string>
    <string name="iluminacion_nombre">Nombre del sistema</string>
    <string name="iluminacion_nombre_placeholder">Nombre Sistema</string>
    <string name="iluminacion_encendido">Encendido</string>
    <string name="iluminacion_intensidad">Intensidad</string>
    <string name="iluminacion_descripcion">Descripción</string>
    <string name="iluminacion_descripcion_placeholder">Ingrese descripción</string>

    <!-- Strings Main-->

    <string name="titulo_bienvenida_main">Bienvenidos a AnalizArApp</string>
    <string name="texto_btn_ingresar">INGRESAR</string>
    <string name="texto_btn_iniciar_tour">INICIAR TOUR</string>
    <string name="descripcion_btn_ingresar">Presionar para iniciar sesión en la aplicación</string>
    <string name="descripcion_btn_iniciar_tour">Presionar para iniciar el recorrido de características de la aplicación</string>
    <string name="descripcion_logotipo">Logotipo de la aplicación AnalizAr App</string>

    <!-- Strings Onboarding1-->

    <string name="seguir_btn_text">SEGUIR</string>
    <string name="seguir_btn_content_description">Continuar a la siguiente pantalla de características de la aplicación</string>
    <string name="textview_content">Con AnalizArApp\n podrás controlar tus consumos \n de una manera innovadora.</string>
    <string name="textview_description">Información sobre el control de consumos en AnalizArApp.</string>
    <string name="textview2_text">¡Te damos la bienvenida!</string>
    <string name="textview2_description">Conocé nuestra aplicación</string>
    <string name="image_description">Una mujer señala los gráficos de consumo de energía eléctrica domiciliario</string>


    <!-- Strings Onboarding-->
    <string name="app_name_onboarding">Analizador de Consumos Eléctricos</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_volver_inicio">Inicio</string>
    <string name="titulo_activity_contacto">CONTACTO</string>
    <string name="titleOnboarding3">Acompañamos a Cuidar el Medioambiente</string>
    <string name="subtitleTextOnboarding3">Te brindamos los mejores consejos \npara cuidar tu bolsillo, ahorrar energía \ny cuidar el medioambiente.</string>
    <string name="link_medioambiente">¿Queres aprender como cuidar el medioambiente \ncon nuestra App?</string>
    <string name="click_medioambiente">CLICK AQUI</string>
    <string name="back">ATRAS</string>
    <string name="continueButton">SEGUIR</string>
    <string name="imgOnb3ContentDescription">Arte conceptual de una lámpara, de la cual salen dos cables: uno es una ficha eléctrica y otro es una planta</string>
    <string name="imgOnb2ContentDescription">Dibujo de una mano presionando con el dedo en la pantalla de un teléfono celular</string>
    <string name="titleOnboarding2">Controlar tu Consumo es Fundamental</string>
    <string name="subtitleTextOnboarding2">Te ayudamos a manejar tu consumo \nmediante gráficos, alertas, consejos \ny mucho más.</string>
    <string name="skip">SALTEAR</string>

    <!-- Strings Contacto -->
    <string name="titulo_publicitario_contacto">¡Soluciones digitales!</string>
    <string name="texto_publicitario_contacto">Asistencia pulse 👇</string>
    <string name="btn_contactanos">Contáctanos</string>
    <string name="btn_soporte">SOPORTE</string>
    <string name="link">By <u><font color="#0000FF">DevFullSolutions</font></u></string>
    <string name="email">Email</string>
    <string name="datos_de_cuenta">Datos de cuenta</string>
    <string name="configuracion">Configuracion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="mi_plan">Mi plan</string>
    <string name="mi_medidor">Mi medidor</string>
    <string name="notificaciones">Notificaciones</string>

    <!-- Strings Soporte -->
    <string name="titulo_soporte">SOPORTE</string>
    <string name="text_nombre_apellido">Nombre y Apellido</string>
    <string name="campo_nombre_apellido">Ingrese su Nombre y Apellido</string>
    <string name="text_correo_electronico">Correo Electronico</string>
    <string name="campo_correo_electronico">Ingrese su Correo Electrónico</string>
    <string name="text_mensaje">Mensaje</string>
    <string name="campo_mensaje">Detalle su consulta para el área SOPORTE de AnalizArApp</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="titulo_video">INSTITUCIONAL</string>
    <string name="texto_valores1">Ecológico</string>
    <string name="texto_valores2">Sustentable</string>
    <string name="texto_valores3">Inteligente</string>
    <string name="titulo_mi_cuenta">Titulo Mi cuenta</string>
    <string name="btn_volver">VOLVER</string>
    <string name="btn_volver_a_contacto">Botón para volver a la sección de contacto</string>
    <string name="btn_enviar_formulario">Botón para enviar el formulario</string>
    <string name="campo_mensaje_accesibilidad">Campo del formulario para ingresar su mensaje al área de soporte</string>
    <string name="campo_correo_electronico_accesibilidad">Campo del formulario para ingresar su correo electrónico</string>
    <string name="campo_nombre_y_apellido_accesibilidad">Campo del formulario para ingresar su nombre y apellido</string>

    <!-- Notifications -->
    <string name="channel_name">analizar</string>
    <string name="channel_description">canal de analizar</string>

    <!--Medio Ambiente-->
    <string name="Monitoreo_y_Gestion">Nuestra aplicación Android está diseñada para ayudarte a monitorizar y gestionar tu consumo eléctrico de manera eficiente. Acá te contamos cómo puede beneficiarte y cómo podés contribuir al cuidado del medioambiente.</string>
    <string name="RegistroDetallado">A través de un registro detallado de tu consumo eléctrico podes configurar alertas y notificaciones para mantenerte informado sobre tus consumos . Así podrás tener una visión clara de cuanta electricidad utilizas. De esta manera podrás aprender sobre tus hábitos de consumo y como pequeñas acciones pueden generar grandes ahorros, no solo económicos sino enérgicos.</string>
    <string name="beneficios">Beneficios Medioambientales</string>
    <string name="subtitulo_medioambiente">¿Sabías también que el uso de nuestra aplicación influye directamente en el cuidado del medioambiente?</string>
    <string name="cuidado_consumo1">Un menor consumo energético reduce la quema de combustibles fósiles, disminuyendo las emisiones de dióxido de carbono y gases de efecto invernadero combatiendo así el cambio climático.</string>
    <string name="cuidado_consumo2">Generar menor cantidad de energía eléctrica significa también menos contaminación en el aire, mejorando así la salud pública y reduciendo las enfermedades respiratorias.</string>
    <string name="cuidado_consumo3">Reducir nuestro consumo energética conserva recursos naturales como el agua y los combustibles fósiles, protegiendo nuestros ecosistemas y biodiversidad.</string>
    <string name="Descargar_app">Usar nuestra aplicación es un paso sencillo y poderoso hacia un consumo eléctrico más consciente y responsable. No solo reducirás tus costos energéticos, sino que también contribuirás activamente a la protección del medioambiente. Juntos, podemos hacer la diferencia.</string>
    <string name="Descargar_app1">¡Empeza a usar AnalizAr App ahora y comenza tu camino hacia el ahorro energético y un futuro más sostenible!</string>
    <string name="volver_tour">VOLVER AL TOUR</string>
    <string name="titulo_medioambiente">MEDIOAMBIENTE</string>

    <!-- Strings para WebAccessActivity -->
    <string name="title_web_access">INGRESÁ A NUESTRA WEB</string>
    <string name="description_web_access">¡Explorá nuestra plataforma online para acceder a ofertas exclusivas. ¡No te pierdas nuestras promos vigentes y encontrá el plan perfecto para vos!</string>
    <string name="button_open_web">ACCEDER AHORA</string>
    <string name="note_web_access">¡Tocá el botón para descubrir nuestras promociones!</string>
    <string name="description_promo_image">Imagen promocional de una persona ingresando al sitio web para conocer los planes y promociones actuales.</string>

    <!-- Descripciones de contenido para accesibilidad -->
    <string name="title_web_access_description">Título: Ingresá a nuestra web</string>
    <string name="description_web_access_description">Descripción:¡Explorá nuestra plataforma online para acceder a ofertas exclusivas y descubrir cómo podés ahorrar en tus servicios eléctricos. ¡No te pierdas nuestras ofertas vigentes y encontrá el plan perfecto para vos!</string>
    <string name="promo_image_description">Imagen promocional: Una mujer observa en su computadora los planes, productos y gráficos de consumo de energía eléctrica domiciliario</string>
    <string name="button_open_web_description">Botón: Acceder ahora para conocer nuestras promociones</string>
    <string name="note_web_access_description">Nota: ¡Tocá el botón para descubrir nuestras promos!</string>

    <!-- Strings Nuevo botón en Main -->
    <string name="title_seccion_web">IR A SECCIÓN WEB</string>
    <string name="descripcion_btn_seccion_web">SECCIÓN WEB</string>

    <!-- Descripciones de contenido para accesibilidad -->
    <string name="title_seccion_web_description">Título: Ir a la sección web dentro de nuestra aplicación</string>
    <string name="descripcion_btn_seccion_web_description">Descripción: Explorá nuestra sección web para acceder a contenido exclusivo y descubrí más sobre nuestros servicios.</string>


>>>>>>> develop
</resources>
