<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".Onboarding1">

    <Button
        android:id="@+id/seguir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="@font/robotobold"
        android:onClick="seguir"
        android:text="@string/seguir_btn_text"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:contentDescription="@string/seguir_btn_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_max="200dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:maxWidth="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/robotoregular"
        android:gravity="center_horizontal"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/textview_content"
        android:textColor="@color/negro"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:contentDescription="@string/textview_description"
        />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/textview2_text"
        android:textAlignment="center"
        android:textColor="@color/verde"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/textview2_description"
        />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/_00"
        android:contentDescription="@string/image_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>