<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context=".Video">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="Titulo de la Activity"
        android:fontFamily="@font/robotobold"
        android:text="@string/titulo_video"
        android:textColor="@color/verde"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="300dp"
        android:layout_height="530dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:contentDescription="Video institucional de AnalizArApp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/texto_valores1"
        android:textColor="@color/negro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:contentDescription="Texto que destaca la contribución a la Ecología de AnalizArApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/texto_valores2"
        android:textColor="@color/negro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:contentDescription="Texto que destaca la contribución a la Sustentabilidad de AnalizArApp"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/texto_valores3"
        android:textColor="@color/negro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:contentDescription="Texto que destaca la utilización de dispositivos Inteligentes en AnalizArApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoView" />

</androidx.constraintlayout.widget.ConstraintLayout>